# cpp_irc

./: CMakeLists.txt  Makefile  README.md  build.bfg  main.cpp  tcp_socket.cpp  tcp_socket.h
assets/: main.chai
src/: bot.cpp  bot.h  channel.cpp  channel.h  client.cpp  client.h  irc_socket.cpp  irc_socket.h  lockless_queue.h  main.cpp  message.cpp  message.h  queue.h  window.h
